--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Neighborhood Map</title>
+	<title>When in Montenegro...</title>
 	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
+	<div>
+		<input placeholder="Search...">
+		<button>Filter</button>
+		<div id="results"></div>
+	</div>
 	<div id="map"></div>
 </body>
 <script src="js/knockout-3.4.2.js"></script>
