--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>When in Montenegro...</title>
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<meta name="viewport" content="device-width, initial-scale=1">
 </head>
 <body>
 	<div>
-		<input placeholder="Search...">
+		<label>Search:</label>
+		<input placeholder="Search..." data-bind="value: searchValue">
 		<button>Filter</button>
-		<div id="results"></div>
 	</div>
+	<div id="result" data-bind="text: result">This is the div we want to target</div>
 	<div id="map"></div>
 </body>
 <script src="js/knockout-3.4.2.js"></script>
