Added a data model

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 </body>
 <script src="js/knockout-3.4.2.js"></script>
 <script src="js/app.js"></script>
+<script src="js/locations.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtw2Wd_f_Wr3Hi9tILlcMby9BVJ7MGdDg&callback=initMap" async defer></script>
 </html>
