--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 	<div id="result" data-bind="text: result">This is the div we want to target</div>
 	<div id="map"></div>
 </body>
+
+<script src="js/jquery-3.3.1.js"></script>
 <script src="js/knockout-3.4.2.js"></script>
-<script src="js/app.js"></script>
 <script src="js/locations.js"></script>
+<script src="js/app.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtw2Wd_f_Wr3Hi9tILlcMby9BVJ7MGdDg&callback=initMap" async defer></script>
 </html>
